--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -2268,4 +2268,10 @@ a.hover-reverse:hover, a.hover-reverse:focus, a.hover-reverse:active {
     float: none;
     width: 100%;
   }
-}
+  /** 
+  <!-- css for detail -->
+  
+  
+  
+  */
+  
